glug presentation ready

--- a/giber/content/web_content/post_template.html
+++ b/giber/content/web_content/post_template.html
@@ -11,7 +11,7 @@
 <link href='/nitrogen/nitrogen.css' type='text/css' rel='stylesheet'>
 
 <body>
-<form method="get" action="http://24.148.8.137:8000/web/search">
+<form method="get" action="search">
 
 
 <br>
